force-app/main/default/objects/Employee__c/fields/Application_status__c.field-meta.xml
<CustomField>
    <fullName>Application_status__c</fullName>
    <label>Application status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First call</fullName>
            </value>
            <value>
                <fullName>General interview</fullName>
            </value>
            <value>
                <fullName>Technical interview</fullName>
            </value>
            <value>
                <fullName>in review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Contract sent</fullName>
            </value>
            <value>
                <fullName>Contract accepted</fullName>
            </value>
            <value>
                <fullName>Contract rejected</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>General status</fullName>
            </value>
            <value>
                <fullName>Interview failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>