force-app/main/default/objects/Employee__c/fields/City_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>City_of_Residence__c</fullName>
    <label>City of Residence</label>
    <length>39</length>
    <required>true</required>
    <type>Text</type>
</CustomField>