force-app/main/default/objects/Employee__c/fields/Employee_feedback__c.field-meta.xml
<CustomField>
    <fullName>Employee_feedback__c</fullName>
    <label>Employee feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>