force-app/main/default/objects/Employee__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diploma</fullName>
                <label>High School Diploma</label>
            </value>
            <value>
                <fullName>University_Graduate</fullName>
                <label>University Graduate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>