force-app/main/default/objects/Employee__c/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <label>Select</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Qualification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Informatics</fullName>
            </value>
            <value>
                <fullName>Scientific</fullName>
            </value>
            <value>
                <fullName>Computer Engineer</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>